--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -10,7 +10,7 @@
 //</Подключаем шрифты>=======================================================================================
 
 //<Иконочные шрифты>==========================================================================================
-//@import "icons";
+@import "icons";
 //</Иконочные шрифты>==========================================================================================
 
 //<Шрифт по умолчанию>==========================================================================================
