--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,4 +1,3 @@
-//====================================================================================================
 .header {
   &__content {
   }
@@ -6,11 +5,10 @@
   &__items {
     display: flex;
     justify-content: space-between;
+    padding: 10px 20px;
   }
+
   &__search {
-    font-weight: 500;
-    line-height: 60px;
-    font-size: 60/56 * 100%;
   }
 
   &__weather {
@@ -20,9 +18,50 @@
     align-items: center;
   }
 }
+.search {
+  &__group {
+    display: flex;
+    align-items: center;
+
+    &:hover {
+      border-bottom: solid 1px #000;
+    }
+  }
+  &__icon-search {
+    color: #000;
+  }
+  &__input {
+    padding: 5px 0px;
+    margin: 0 0 0 10px;
+    background-color: rgba(0, 0, 0, 0);
+    &:hover + .search__icon-google {
+      opacity: 1;
+    }
+  }
+  &__icon-google {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
+.weather-icon {
+  img {
+    height: 20px;
+    margin-right: 10px;
+  }
+}
 .city {
+  filter: invert(20);
+  font-weight: 500;
+  font-size: 60/56 * 100%;
 }
 .temp {
+  filter: invert(20);
+  font-size: 1.625rem;
+  font-weight: 400;
+}
+.weather-temp {
+  display: flex;
 }
 
 //====================================================================================================
