--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -983,7 +983,7 @@ body.ie ._ibg img {
   -webkit-filter: invert(20);
           filter: invert(20);
   font-weight: 500;
-  font-size: 107.1428571429%;
+  font-size: 120%;
 }
 
 .temp {
