add hover for TODO

--- a/#src/scss/icons.scss
+++ b/#src/scss/icons.scss
@@ -28,6 +28,12 @@
 ._icon-search:before {
   content: "\e986";
 }
+._icon-checkbox-checked:before {
+  content: "\ea52";
+}
+._icon-checkbox-unchecked:before {
+  content: "\ea53";
+}
 ._icon-google:before {
   content: "\e900";
 }
