--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -81,6 +81,29 @@
   }
 
   &__form {
+    input {
+      width: 100%;
+      padding-top: 4px;
+      display: block;
+      background: 0;
+      border: 0;
+      border-bottom: 2px solid #fff;
+      color: #fff;
+      font-size: 2.25em;
+      line-height: 1.2;
+      font-weight: 500;
+      outline: none;
+      text-align: center;
+      transition: border-color 0.2s ease;
+    }
+  }
+  &__form-h2 {
+    padding-bottom: 15px;
+    line-height: 1.2;
+    white-space: normal;
+    font-size: 337.5%;
+    text-align: center;
+    font-weight: 400;
   }
 
   &__form-input {
@@ -121,11 +144,29 @@
 
   &__focus-input {
   }
-
+  &__focus-div {
+    display: flex;
+    @media (any-hover: hover) {
+      &:hover {
+        .bot__focus-icon {
+          visibility: visible;
+        }
+      }
+    }
+  }
+  &__focus-icon {
+    visibility: hidden;
+  }
   &__focus-li {
+    margin-left: 10px;
   }
 }
-
+._icon-checkbox-checked + .bot__focus-li {
+  text-decoration: line-through;
+}
+.zi {
+  z-index: 100;
+}
 .test {
   display: none;
 }
