--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,4 +1,3 @@
-
 .header {
   &__content {
   }
@@ -27,20 +26,19 @@
     position: relative;
 
     &:hover .search__input {
-      border-bottom: solid 1px #000;
+      border-bottom: solid 1px#fff;
     }
     &:hover .search__icon-google {
       display: block;
     }
   }
   &__icon-search {
-    color: #000;
   }
   &__input {
     padding: 5px 10px 5px 0;
     margin: 0 0 0 10px;
-    background-color: rgba(0, 0, 0, 0);
-    border-bottom: solid 1px #000;
+    background: 0;
+    border-bottom: solid 1px #fff;
     @media (any-hover: hover) {
       border-bottom: none;
     }
@@ -55,7 +53,7 @@
   &__icon-google {
     position: absolute;
     right: 0;
-
+    color: #fff;
     @media (any-hover: hover) {
       display: none;
     }
@@ -64,12 +62,12 @@
 
 .weather-icon {
   img {
+    filter: invert(1);
     height: 36px;
     margin-right: 10px;
   }
 }
 .city {
-  filter: invert(20);
   font-weight: 500;
   font-size: 60/50 * 100%;
   @media (max-width: $md4+px) {
@@ -77,7 +75,6 @@
   }
 }
 .temp {
-  filter: invert(20);
   font-size: 1.625rem;
   font-weight: 400;
   @media (max-width: $md4+px) {
