--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -1,21 +1,11 @@
 //====================================================================================================
 .main__form,
-.main__greetings {
-  display: none;
-}
-.show {
-  display: block;
-}
+.main__greetings,
 .bot__form-focus,
 .bot__focus-li,
-.bot__focus-icon {
+.bot__focus-icon,
+.bot__focus-del-chec {
   display: none;
-}
-.zad {
-  margin: 17px 0 8px;
-  font-size: 70%;
-  line-height: 120%;
-  text-transform: uppercase;
 }
 .showing {
   display: block;
@@ -30,11 +20,17 @@
 }
 
 .bgImage {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: transparent;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
   z-index: -1;
   animation: fadein 1s linear;
 }
@@ -42,6 +38,7 @@
 .page {
 }
 .content {
+  color: #fff;
   display: flex;
   flex-direction: column;
 
@@ -51,7 +48,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    flex: 1 1 185px;
+    flex: 1 1 300px;
   }
 
   &__main {
@@ -89,7 +86,6 @@
       background: 0;
       border: 0;
       border-bottom: 2px solid #fff;
-      color: #fff;
       font-size: 2.25em;
       line-height: 1.2;
       font-weight: 500;
@@ -120,7 +116,7 @@
   &__focus {
     font-size: 2.1875em;
     font-weight: 400;
-
+    margin-top: 70px;
     line-height: normal;
     cursor: default;
   }
@@ -146,23 +142,49 @@
   &__focus-input {
   }
   &__focus-div {
+    font-size: 1.875em;
     display: flex;
+    justify-content: center;
+    align-items: center;
     @media (any-hover: hover) {
       &:hover {
-        .bot__focus-icon {
+        .bot__focus-icon,
+        .bot__focus-del-chec {
           visibility: visible;
         }
       }
     }
   }
   &__focus-icon {
+    font-size: 20px;
+    cursor: pointer;
     @media (any-hover: hover) {
       visibility: hidden;
     }
   }
   &__focus-li {
-    margin-left: 10px;
+    margin: 3px 0 3px 10px;
   }
+  &__focus-del-chec {
+    align-self: center;
+    font-size: 20px;
+    margin: 0 0 0 10px;
+    padding: 5px;
+    cursor: pointer;
+    @media (any-hover: hover) {
+      visibility: hidden;
+    }
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.199);
+      border-radius: 50%;
+    }
+  }
+}
+.zad {
+  margin: 90px 0 8px;
+  font-size: 1.85em;
+  line-height: 120%;
+  text-transform: uppercase;
 }
 ._icon-checkbox-checked + .bot__focus-li {
   text-decoration: line-through;
