--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -30,7 +30,7 @@ $md2: 991.98;
 $md3: 767.98;
 $md4: 479.98;
 
-$mainColor: rgba(255, 255, 255, 0.85);
+$mainColor: #fff;
 
 //</ПЕРЕМЕННЫЕ>===========================================================================================================
 
