--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -35,6 +35,7 @@
   &__icon-search {
   }
   &__input {
+    color: #fff;
     padding: 5px 10px 5px 0;
     margin: 0 0 0 10px;
     background: 0;
