--- a/#src/scss/icons.scss
+++ b/#src/scss/icons.scss
@@ -31,6 +31,9 @@
 ._icon-search:before {
   content: "\e986";
 }
+._icon-plus:before {
+  content: "\ea0a";
+}
 ._icon-checkbox-checked:before {
   content: "\ea52";
 }
