--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -1158,9 +1158,7 @@ body.ie ._ibg img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 224px;
-          flex: 1 1 224px;
+  margin-top: -50px;
 }
 
 .content__bot {
@@ -1187,7 +1185,20 @@ body.ie ._ibg img {
   letter-spacing: -5px;
 }
 
-.main__form input {
+.main__form-h2 {
+  padding-bottom: 15px;
+  line-height: 1.2;
+  white-space: normal;
+  font-size: 337.5%;
+  text-align: center;
+  font-weight: 400;
+}
+
+.main__form-input {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  color: #fff;
   width: 100%;
   padding-top: 4px;
   display: block;
@@ -1202,15 +1213,7 @@ body.ie ._ibg img {
   -webkit-transition: border-color 0.2s ease;
   -o-transition: border-color 0.2s ease;
   transition: border-color 0.2s ease;
-}
-
-.main__form-h2 {
-  padding-bottom: 15px;
-  line-height: 1.2;
-  white-space: normal;
-  font-size: 337.5%;
-  text-align: center;
-  font-weight: 400;
+  margin: 0 auto;
 }
 
 .main__greetings {
@@ -1250,6 +1253,7 @@ body.ie ._ibg img {
 }
 
 .bot__focus-plus {
+  padding-left: 10px;
   display: none;
   color: #fff;
   -ms-flex-item-align: center;
@@ -1296,7 +1300,7 @@ body.ie ._ibg img {
 }
 
 .zad {
-  margin: 90px 0 8px;
+  margin: 50px 0 8px;
   font-size: 1.85em;
   line-height: 120%;
   text-transform: uppercase;
@@ -1378,8 +1382,12 @@ body.ie ._ibg img {
   }
 
   .main__clock-h1 {
-    margin-top: 50px;
+    margin-top: 90px;
     font-size: 600%;
+  }
+
+  .main__form-input {
+    width: 300px;
   }
 
   .main__greetings {
