--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -4,7 +4,10 @@
 .bot__form-focus,
 .bot__focus-li,
 .bot__focus-icon,
-.bot__focus-del-chec {
+.bot__focus-del-chec,
+.content__todo-input,
+.content__todo-btn,
+.todo__app {
   display: none;
 }
 .showing {
