--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -86,6 +86,7 @@ body {
 @import "header";
 @import "footer";
 @import "home";
+@import "todoApp";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
