--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -1073,7 +1073,10 @@ body.ie ._ibg img {
 .bot__form-focus,
 .bot__focus-li,
 .bot__focus-icon,
-.bot__focus-del-chec {
+.bot__focus-del-chec,
+.content__todo-input,
+.content__todo-btn,
+.todo__app {
   display: none;
 }
 
@@ -1320,6 +1323,104 @@ body {
 
 .test {
   display: none;
+}
+
+.todo__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: auto;
+  margin-bottom: 5px;
+}
+
+.todo__app {
+  margin-right: 10px;
+  border-radius: 5px;
+  background-color: #fff;
+  position: absolute;
+  right: 0;
+  bottom: 30px;
+  height: auto;
+  width: 320px;
+}
+
+.todo__header-head {
+  padding: 7px 0 0 10px;
+  color: #000;
+  font-size: 20px;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+     text-overflow: ellipsis;
+  text-transform: capitalize;
+  white-space: nowrap;
+}
+
+.todo__content {
+  min-height: 152px;
+  max-height: 152px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.content__todo-btn {
+  color: #fff;
+  background: rgba(72, 139, 163, 0.95);
+  border: 0;
+  font-size: 0.875rem;
+  font-weight: 500;
+  border-radius: 50px;
+  padding: 7px 27px 8px;
+  margin: 30px 0 0 0;
+}
+
+.content__todo-input {
+  width: 320px;
+  height: 40px;
+  color: #000;
+  padding: 0 5px;
+}
+
+.li-todo {
+  color: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.span-todo {
+  margin: 0 5px 0 0;
+}
+
+.btn-todo {
+  margin: 5px 10px;
+  padding: 5px 10px;
+}
+
+.btn-todo:hover {
+  background-color: #443535;
+  border-radius: 50%;
+  padding: 5px 10px;
+  color: #fff;
 }
 
 .page {
