--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,5 +1,10 @@
-
 //====================================================================================================
-
+.footer__content {
+  margin: 20px 20px 20px 0;
+}
+.todo__head {
+  font-size: 106.25%;
+  font-weight: 500;
+  cursor: pointer;
+}
 //====================================================================================================
-
