--- a/#src/scss/todoApp.scss
+++ b/#src/scss/todoApp.scss
@@ -11,30 +11,34 @@
     background-color: #fff;
     position: absolute;
     right: 0;
-    bottom: 30px;
+    bottom: 55px;
     height: auto;
     width: 320px;
   }
   &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 0;
   }
 
   &__header-head {
     padding: 7px 0 0 10px;
     color: #000;
     font-size: 20px;
-    overflow: hidden;
     text-overflow: ellipsis;
     text-transform: capitalize;
     white-space: nowrap;
   }
 
   &__content {
-    min-height: 152px;
-    max-height: 152px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;
+    height: auto;
+    width: auto;
   }
 }
 .content {
@@ -49,7 +53,7 @@
     font-weight: 500;
     border-radius: 50px;
     padding: 7px 27px 8px;
-    margin: 30px 0 0 0;
+    margin: 0 10px 0 0;
   }
 
   &__todo-input {
@@ -61,8 +65,10 @@
 }
 .li-todo {
   color: #000;
-  display: flex;
-  justify-content: center;
+  display: inline-flex;
+
+  overflow: hidden;
+  justify-content: space-between;
   align-items: center;
 }
 .span-todo {
@@ -80,6 +86,12 @@
 }
 .bot {
   &__toDo-ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 10px 0 20px;
+    width: 100%;
   }
 
   &__toDo {
