--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,10 +1,12 @@
 //====================================================================================================
 .footer__content {
   margin: 20px 20px 20px 0;
+
 }
 .todo__head {
   font-size: 106.25%;
   font-weight: 500;
   cursor: pointer;
+  text-shadow: 1px 1px 2px black;
 }
 //====================================================================================================
