--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -95,6 +95,7 @@ body {
 
   &__form {
     input {
+      text-shadow: 1px 1px 2px black;
     }
   }
   &__form-h2 {
@@ -143,7 +144,7 @@ body {
   &__focus {
     font-size: 2.1875em;
     font-weight: 400;
-    margin-top: 70px;
+    margin-top: 30px;
     line-height: normal;
     cursor: default;
     @media (max-width: $md3+px) {
@@ -172,6 +173,7 @@ body {
       outline: none;
       text-align: center;
       transition: border-color 0.2s ease;
+      text-shadow: 1px 1px 2px black;
       @media (max-width: $md3+px) {
         width: 300px;
       }
