--- a/chromeExtention/css/style.css
+++ b/chromeExtention/css/style.css
@@ -1208,6 +1208,10 @@ body {
   letter-spacing: -5px;
 }
 
+.main__form input {
+  text-shadow: 1px 1px 2px black;
+}
+
 .main__form-h2 {
   padding-bottom: 15px;
   line-height: 1.2;
@@ -1248,7 +1252,7 @@ body {
 .bot__focus {
   font-size: 2.1875em;
   font-weight: 400;
-  margin-top: 70px;
+  margin-top: 30px;
   line-height: normal;
   cursor: default;
 }
@@ -1273,6 +1277,7 @@ body {
   -webkit-transition: border-color 0.2s ease;
   -o-transition: border-color 0.2s ease;
   transition: border-color 0.2s ease;
+  text-shadow: 1px 1px 2px black;
 }
 
 .bot__focus-plus {
